# toxic_comment_prediction

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
application/: api_config.py  api_models.py  main.py
application/model_tools/: load_model.py  predict_tools.py
docs/: Makefile  conf.py  index.rst  make.bat
models/bert_toxic_predict/: config.json
models/tokenizer/: config.json  tokenizer.json
src/data/: clean_data.py  process_data.py  text_preprocessing.py  transform_dataset.py
tests/: test_server.py  test_text_preprocessing.py
workflow/: Snakefile
